# ros2_exams

./: README.md
ecn_2020/: CMakeLists.txt  control_node.cpp  package.xml
ecn_2020/launch/: simulation_launch.py  track_launch.py
ecn_2020/src/: simulation.py
ecn_2020/subject/: midwa_ds.tex
ecn_2020/urdf/: r2d2.xacro
ecn_2021/: CMakeLists.txt  control_node.cpp  package.xml
ecn_2021/launch/: both_launch.py  config.rviz  reset_launch.py  simulation_launch.py  turtlebot_nav_launch.py
ecn_2021/map/: house.pgm
ecn_2021/subject/: midwa_ds.tex
ecn_2021/urdf/: target.h  turtlebot1_nav_param.yaml  turtlebot3_waffle_pi.urdf.xacro
ecn_2022/: CMakeLists.txt  control_node.cpp  package.xml
ecn_2022/include/ecn_2022/: eigen.h  ik_client.h
ecn_2022/launch/: config.rviz  simulation_launch.py  slider_launch.py  twist.yaml
ecn_2022/subject/: midwa_ds.tex
ecn_2023/ecn_2023/: uav.cpp
ecn_2023/ecn_2023/launch/: multi_uav_launch.py  super_launch.py
